# funcypy

./: .gitignore  README.md  pyproject.toml  runtests.py  task-001.md  task-003.md  task-004.md  todo.md
issue-004/: issue.py
issues/: task-002.md
src/funcypy/: cols.py  curry.py  display.py  funcy.py  maps.py  monitor.py  seqs.py  sets.py  times.py  types.py  vecs.py
src/funcypy/eager/: cols.py  seqs.py
tests/: test_cols.py  test_curry.py  test_display.py  test_funcy.py  test_maps.py  test_monitor.py  test_seqs.py  test_sets.py  test_times.py  test_types.py  test_vecs.py
