[project]
name = "funcypy"
version = "0.1.0"
description = "Minimalist functional leaning library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funcypy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
