[project]
name = "funcypy"
version = "0.8.1"
description = "Minimalist functional leaning library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
  { name="Carlos Bonilla", email="lostineverland@gmail.com" }
]
license = { text="GPL-3.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funcypy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
